src/test/ui/issues/30000-39999/issue-38458.rs
const x: () = {
    return; //~ ERROR return statement outside of function body
};

fn main() {}
